# aoc2022

aoc/: Cargo.toml
aoc/src/: main.rs
aoc_common/src/: lib.rs
day1-1/src/: main.rs
day1-2/src/: main.rs
day2-1/src/: main.rs
day2-2/src/: main.rs
day3-1/src/: main.rs
day3-2/src/: input.rs  main.rs
day4_1/: Cargo.toml
day4_1/src/: lib.rs
day4_2/: Cargo.toml
day4_2/src/: lib.rs
day5_1/: Cargo.toml
day5_1/src/: lib.rs
day5_2/: Cargo.toml
day5_2/src/: lib.rs
day6_1/: Cargo.toml
day6_1/src/: lib.rs
day6_2/: Cargo.toml
day6_2/src/: lib.rs
day7_1/: Cargo.toml
day7_1/src/: lib.rs
day7_2/: Cargo.toml
day7_2/src/: lib.rs
