[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_common = { path = "../aoc_common" }
day4_1 = { path = "../day4_1" }
day4_2 = { path = "../day4_2" }
day5_1 = { path = "../day5_1" }
day5_2 = { path = "../day5_2" }
day6_1 = { path = "../day6_1" }
day6_2 = { path = "../day6_2" }
day7_1 = { path = "../day7_1" }
day7_2 = { path = "../day7_2" }
yare = "1.0.2"
